--- a/index.html
+++ b/index.html
@@ -15,35 +15,32 @@
   </head>
   <body>
     <div class="container">
-      <div>
-        <input
-          type="password"
-          id="password"
-          placeholder="Contraseña"
-          onInput="validar()"
-        />
-        <i id="ver" onclick="ver()" class="eye-icon fas fa-eye-slash"></i>
-      </div>
-      
+      <input type="password" id="password" placeholder="Contraseña" oninput="validar()" />
+      <i id="ver" onclick="ver()" class="eye-icon fas fa-eye-slash"></i>
 
-      <div id="largo">Largo : 0</div>
+      <div id="largo">Largo de la contraseña: 0</div>
 
       <div id="validar0">
         <i class="far fa-check-circle"></i> <span>Más de 5 carácteres</span>
       </div>
+
       <div id="validar1">
         <i class="far fa-check-circle"></i> <span>Menos de 10 carácteres</span>
       </div>
+
       <div id="validar2">
         <i class="far fa-check-circle"></i> <span>Contiene números</span>
       </div>
+
       <div id="validar3">
         <i class="far fa-check-circle"></i>
         <span>Contiene carácteres especiales</span>
       </div>
+
       <div id="validar4">
         <i class="far fa-check-circle"></i> <span>No debe tener espacios</span>
       </div>
+      
     </div>
 
     <script src="script.js"></script>
