--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     />
     <i id="ver" onclick="ver()" class="eye-icon fas fa-eye-slash"></i>
 
-    <div id="largo">Largo de la contraseña: 0</div>
+    <div class="largo__de__contra">Largo de la contraseña: <span id="largo">0</span></div>
 
     <div class="validar">
       <i class="icon far fa-times-circle"></i> <span>Más de 5 caracteres</span>
