--- a/index.html
+++ b/index.html
@@ -1,27 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Validador de Contraseña</title>
   <link rel="stylesheet" href="styles.css" />
-  <link
-    rel="stylesheet"
-    href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
-    crossorigin="anonymous"
-  />
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 </head>
+
 <body>
   <div class="container">
-    <input
-      type="password"
-      id="password"
-      placeholder="Contraseña"
-      oninput="validar()"
-    />
-    <i id="ver" onclick="ver()" class="eye-icon fas fa-eye-slash"></i>
+    <input type="password" id="password" placeholder="Contraseña" oninput="validar()" />
+    <button onclick="ver()" id="ver"><i class="eye-icon fas fa-eye-slash"></i></button>
 
     <div class="largo__de__contra">Largo de la contraseña: <span id="largo">0</span></div>
 
@@ -49,4 +42,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
