--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <input type="password" id="password" placeholder="Contraseña" oninput="validar()" />
     <button onclick="ver()" id="ver"><i class="eye-icon fas fa-eye-slash"></i></button>
 
-    <div class="largo__de__contra">Largo de la contraseña: <span id="largo">0</span></div>
+    <div class="largo__de__contra">Largo: <span id="largo">0</span></div>
 
     <div class="validar">
       <i class="icon far fa-times-circle"></i> <span>Más de 5 caracteres</span>
