--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <div class="validar">
       <i class="icon far fa-times-circle"></i>
-      <span>Contiene caracteres especiales</span>
+      <span>Caracteres especiales</span>
     </div>
 
     <div class="validar">
